<?xml version="1.0"?>
<package>
  <name>ar_track_alvar_meta</name>
  <version>0.5.0</version>
  <description>
  This package is a ROS wrapper for Alvar, an open source AR tag tracking library.
  </description>
  <maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ar_track_alvar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
