<?xml version="1.0"?>
<package>
  <name>ar_track_alvar_msgs</name>
  <version>0.4.1</version>
  <description>
  This package is a ROS wrapper for Alvar, an open source AR tag tracking library.
  </description>
  <maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ar_track_alvar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
