<?xml version="1.0"?>
<package>
  <name>yocs_ar_pair_tracking</name>
  <version>0.6.4</version>
  <description>The AR pair tracking package</description>
  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author>Daniel Stonier</author> 
  <author>Jihoon Lee</author> 
  <author>Jorge Santos Simon</author> 

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/yocs_ar_pair_tracking</url> 
  <url type="repository">https://github.com/yujinrobot/yujin_ocs</url> 
  <url type="bugtracker">https://github.com/yujinrobot/yujin_ocs/issues</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yocs_math_toolkit</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>yocs_ar_marker_tracking</build_depend>
  <build_depend>yocs_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>yocs_math_toolkit</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>yocs_ar_marker_tracking</run_depend>
  <run_depend>yocs_msgs</run_depend>

</package>
