<package>
  <name>yocs_controllers</name>
  <version>0.2.2</version>
  <description>
     Library for various controller types and algorithms.
     By now it just contains a Controller class definition with the common interface
     that controllers intended to work with Yujin's control system must implement.
  </description>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/yocs_controllers</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
</package>
