<package>
  <name>yocs_controllers</name>
  <version>0.2.3</version>
  <description>
     Library for various controller types and algorithms
  </description>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/yocs_controllers</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
</package>
